--- a/vue/package.json
+++ b/vue/package.json
@@ -9,10 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@headlessui/vue": "^1.7.9",
+    "@heroicons/vue": "^2.0.15",
+    "@tailwindcss/forms": "^0.5.3",
+    "vue": "^3.2.45",
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
     "vite": "^4.1.0"
   }
 }
