--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.9",
     "@heroicons/vue": "^2.0.15",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.3.3",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
